# sorry-lang

./: CMakeLists.txt  README.md  ast.c  codegen.c  lexer.c  main.c
Headers/: ast.h  codegen.h  lexer.h  parser.h  symbol_table.h
